test/good/modules/use01.px

use math

print sin(0e6)
